# Matrixagon2

./: Cargo.toml  README.md
.cargo/: config.toml
benches/: mesh_gen.rs
mtxg2-derive/: Cargo.toml
mtxg2-derive/src/: lib.rs
mtxg2-util/: Cargo.toml
mtxg2-util/src/: lib.rs
mtxg2gp/: Cargo.toml  debug.rdc  debug1.rdc  debug2.rdc  debug3.rdc  debug4.rdc  debug5.rdc  debug6.rdc  debugger.cap  transparency_2.rdc
mtxg2gp/src/: main.rs
mtxg2rl/: Cargo.toml
src/: chunk_mesh.rs  debug.rs  framebuffer.rs  handler.rs  lib.rs  measurement.rs  swapchain.rs  ui_mesh.rs  util.rs  world.rs
src/component/: camera.rs  debug_ui.rs  flags.rs  mod.rs  terrain.rs  texture.rs  tick.rs
src/component/terrain/: block_gen.rs  chunk_gen.rs  chunk_gen_hf.rs  chunk_gen_mf.rs  chunk_mesh.rs  mesh_util.rs  mod.rs  terrain_gen.rs
src/resource/block_textures/: water.pdn
src/shader/: chunk.frag  chunk.rs  chunk.vert  chunk_fluid.vert  chunk_translucent.frag  chunk_transparent.frag  chunk_transparent.vert  cube.frag  cube.rs  cube.vert  debug_ui.frag  debug_ui.rs  debug_ui.vert  mod.rs  triangle.rs  triangle.vert
tests/: setup.rs
