workspace = { members = ["mtxg2-derive", "mtxg2-util"] }

[package]
name = "matrixagon2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ash = { version = "0.37.3", features = ["linked"] }
ash-window = "0.12.0"
winit = "0.28.7"
raw-window-handle = "0.5.2"
png = { version = "0.17.10", features = [] }
uom = "0.35.0"
egui = { version = "0.24.1", features = ["bytemuck"] }
noise = "0.8.2"

matrixagon_util = { path = "./mtxg2-util" }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "mesh_gen"
harness = false
