[package]
name = "matrixagon_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["extra-traits", "derive"] }
quote = "1.0"
proc-macro2 = "1.0"

ash = { version = "0.37.3", features = ["linked"] }
